Fixed:arrow  flicker issue

--- a/src/blocks/testimonial/style.scss
+++ b/src/blocks/testimonial/style.scss
@@ -172,8 +172,7 @@
     top: 50%;
     display: block;
     width: auto;
-    height: auto;
-    padding: 0;
+    height: auto;   
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
